# allegro-project

./: .gitignore  00_LIRE_EN_PREMIER.md  CMakeLists.txt  Dockerfile
01_projet_jeu/: CMakeLists.txt  bulles.c  test.h
01_projet_jeu/archives_code/: bulles.c  bulles.h  test.h
01_projet_jeu/src/: IHM.c  IHM.h  affichage.c  affichage.h  config_jeu.h  logique_jeu.c  logique_jeu.h  main.c  sauvegarde.c  sauvegarde.h
01_projet_jeu/src/src/: IHM.c  affichage.c  affichage.h  logique_jeu.c  logique_jeu.h  main.c  sauvegarde.c  sauvegarde.h
03_configuration_docker/: Dockerfile
allegro-4.4.2/include/allegro/platform/: alplatf.h  alunixac.h
